--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ subtitle: AI Engineer
 email: battocchiojoy@gmail.com
 description: Project portfolio and personal informations
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: https://jobatt96.github.io
+url: https://joy-battocchio.github.io
 author: Joy Battocchio
 street_address: 
 city: Trento
@@ -15,20 +15,20 @@ phone: (+39) 346 0384745
 
 # homepage tiles
 tiles-source: pages # accepts "posts" or "pages"
-tiles-count: 6
+tiles-count: 8
 
 # social settings (key must match name of font awesome icon)
 # see https://fontawesome.com/icons?d=gallery&p=2&s=brands
 # Icons are not shown if value is empty
 # You need to restart jekyll for changes to have an effect
 socials:
-  GitHub: 
+  GitHub: https://github.com/joy-battocchio
   GitLab:
   Google-Plus: 
-  Instagram:
-  LinkedIn: 
+  Instagram: https://www.instagram.com/borlotto.bean/
+  LinkedIn: https://www.linkedin.com/in/joy-battocchio-94543b102/
   Twitter: 
-  Facebook:
+  Facebook: https://www.facebook.com/joy.battocchio.3
   Slack:
 
 # build settings
